# seyrusefer

./: Authors  CMakeLists.txt  README-TR.md  README.md  partitions.csv  sdkconfig.defaults
docs/: 3lu_kntrlc_govde_v4.STL  3lu_kntrlc_kutu_type_c_v4.SLDASM  3lu_kntrlc_v4_kapak.STL  civata_sabitleme_v4.STL  kutu_alt_type_c_rev4.SLDPRT
docs/solidworks/: 3lu_kntrlc_govde_v4.sldprt  3lu_kntrlc_kelepce_v4.sldprt  3lu_kntrlc_v4.sldasm  3lu_kntrlc_v4_kapak.sldprt  civata_sabitleme_v4.sldprt  kutu_kapak_v4.sldprt
docs/stl/: 3lu_kntrlc_kelepce_v4.stl  civata_sabitleme2_v4.stl  kutu_alt_type_c_rev4.stl  kutu_kapak_v4.stl
main/: CMakeLists.txt  config.c  config.h  debug.c  debug.h  hid.c  hid.h  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hid_hidd_prf_api.c  hidd_le_prf_int.h  httpd.c  httpd.h  main.c  platform.c  platform.h  queue.h  settings.c  settings.h  seyrusefer.c  seyrusefer.h  timer.c  timer.h  uuid.c  uuid.h  version.h  wifi.c  wifi.h
main/www/: index.html
